# glowbarn-os

./: ARCHITECTURE.md  Cargo.toml  Makefile  README.md
app/: Cargo.toml
app/src/: cli.rs  config.rs  main.rs
buildroot/: Config.in  external.desc  external.mk
buildroot/board/glowbarn/: genimage-rpi4.cfg  genimage-rpi5.cfg  genimage-x86.cfg  post-build.sh  post-image-rpi5.sh  post-image-x86.sh  post-image.sh
buildroot/configs/: glowbarn_rpi4_defconfig  glowbarn_rpi5_defconfig  glowbarn_x86_64_defconfig
buildroot/overlay/etc/glowbarn/: config.toml  config.yaml  hal.toml  sensors.toml
buildroot/overlay/etc/systemd/system/: glowbarn-hal.service  glowbarn-sensors.service  glowbarn.service
buildroot/overlay/opt/glowbarn/: glowbarn-cli.py  glowbarn.py
buildroot/package/glowbarn/: Config.in  glowbarn.desktop  glowbarn.mk  glowbarn.service
buildroot/package/glowbarn-sensors/: 99-glowbarn-sensors.rules  Config.in  glowbarn-sensors.mk  glowbarn-sensors.service
buildroot/package/glowbarn-sensors/src/sensors/: __init__.py  base.py  emf.py  humidity.py  motion.py  pressure.py  temperature.py  vibration.py
docs/: INSTALL.md
docs/wiki/: Getting-Started.md  Home.md
hal/: Cargo.toml
hal/examples/: emf_scanner.rs  sensor_demo.rs
hal/src/: audio.rs  camera.rs  gpio.rs  i2c.rs  lib.rs  sdr.rs  spi.rs  usb.rs
sensors/: Cargo.toml
sensors/src/: anomaly.rs  fusion.rs  lib.rs  recording.rs  triggers.rs
