[package]
name = "glowbarn"
version = "0.1.0"
edition = "2021"
authors = ["GlowBarn Team"]
description = "GlowBarn Paranormal Detection Suite - Main Application"
license = "GPL-3.0"
repository = "https://github.com/bad-antics/glowbarn-os"
default-run = "glowbarn"

[[bin]]
name = "glowbarn"
path = "src/main.rs"

[[bin]]
name = "glowbarn-cli"
path = "src/cli.rs"

[dependencies]
# Workspace crates
glowbarn-hal = { path = "../hal" }
glowbarn-sensors = { path = "../sensors" }

# Async
tokio = { version = "1.0", features = ["full", "signal"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# System info
sysinfo = "0.30"

[dev-dependencies]
tokio-test = "0.4"
