[package]
name = "glowbarn-sensors"
version = "0.1.0"
edition = "2021"
authors = ["GlowBarn Team"]
description = "Sensor fusion and anomaly detection for GlowBarn Paranormal Detection Suite"
license = "GPL-3.0"
repository = "https://github.com/bad-antics/glowbarn-os"

[dependencies]
# HAL
glowbarn-hal = { path = "../hal" }

# Async
tokio = { version = "1.0", features = ["full", "sync"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Math and DSP
nalgebra = "0.32"
num-complex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
